--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,24 +1,24 @@
-body>.container {
+body.dark {
+    --bg-color: #262626;
+    --bg-secondary-color: #131316;
+    --font-color: #f5f5f5;
+    --color-grey: #777;
+    --color-darkGrey: #555;
+    --color-lightGrey: #555;
+}
+
+body > .container {
     max-width: 720px;
-}
-
-body>footer {
-    background-color: #fafafa;
-    padding: 4rem;
-}
-
-body.dark>footer {
-    background-color: #262626;
 }
 
 section {
     margin: 5rem auto;
 }
 
-.install button {
-    text-align: center;
+input, .sortable-list {
+    background-color: var(--bg-secondary-color);
 }
 
-.install {
-    margin-bottom: 1rem;
+input::placeholder, input {
+    color: var(--font-color);
 }
