Cached-only option to show only content that has already been cached.
Additional options moved to their own section.

Updated buttons and links colors to match Bootstrapper branding.

Added validations for debrid-related inputs.

Disabled "Load Addons Preset" button until the users has logged in.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,3 +28,15 @@ input::placeholder,
 input {
   color: var(--font-color);
 }
+
+.button.primary {
+  background-color: #4466d2;
+}
+
+.button.secondary {
+  background-color: #a82eec;
+}
+
+a {
+  color: #4466d2;
+}
